# pseudo

./: experiments.ipynb  pyproject.toml  setup.py
src/pseudo/: __init__.py  crossover.py  helpers.py  minimize.py  mutation.py  selection.py
src/pseudo/utils/: __init__.py
src/utils/: problems.py
test/: crossover_test.py  helpers_test.py  mutation_test.py  problems_test.py  selection_test.py
test/utils/: problems_test.py
