[tool.poetry]
name = "pseudo"
version = "0.1.0"
description = "A Python package for the PSEUDO heuristic."
authors = ["Felipe Paradas <felipegparadas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
jupyter = "^1.0"
pymoo = "^0.6"
tqdm = "^4.62.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
